--- a/mamamia-massas/src/App.css
+++ b/mamamia-massas/src/App.css
@@ -40,3 +40,30 @@
 .read-the-docs {
   color: #888;
 }
+
+
+nav img {
+  max-width: 20px;
+  max-height: 20px;
+  margin-right: 10px;
+}
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+nav li {
+  margin-right: 20px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #333;
+}
+
+nav a:hover {
+  color: #666;
+}
