finalizado pastas e molhos
incluído descrição dos molhos. em molho e retirado nas pastas, fica apenas o nome. iniciar bebidas agora

--- a/mamamia-massas/src/components/DishCard/DishCard.css
+++ b/mamamia-massas/src/components/DishCard/DishCard.css
@@ -18,3 +18,12 @@
   height: 128px;
   border-radius: 4px;
 }
+
+.DishCard .SauceList {
+  background-color: transparent;
+  color: antiquewhite;
+}
+
+.DishCard .SauceList li {
+  border-bottom-color: rgba(255, 255, 255, 0.1);
+}
