finalizado drinks e footer
iniciado uma pagina cardapio. duvida como deixar ela.

--- a/mamamia-massas/src/components/Footer/Footer.css
+++ b/mamamia-massas/src/components/Footer/Footer.css
@@ -1,10 +1,40 @@
 .Footer {
-  display: flex;
-  justify-content: center;
+  background-color: #410121;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
 }
 
-.Footer > div {
-  width: 100%;
-  max-width: 1024px;
-  padding: 48px 8px;
+.Footer .RichText {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Footer .RichText a {
+  margin: 10px;
+  display: inline-block;
+}
+
+.Footer .RichText img {
+  width: 30px;
+  height: 30px;
+
+}
+
+.Footer h2 {
+  margin: 10px 0;
+}
+
+.Footer p {
+  margin: 5px 0;
+}
+.Footer a {
+  display: inline-flex;
+  color: #ffffff;
+}
+
+.Footer a hover {
+  text-decoration: underline;
+  color: #f8f8f8;
 }
